# qt-openGL

./: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.h
html/: index.html
